tidies up method